# renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/opengl/: imgui.frag.glsl  imgui.vert.glsl  model.frag.glsl  model.vert.glsl
assets/shaders/vulkan/: imgui.slang  model.slang
src/: .clang-format  backend.h  camera.h  main.cpp  model.cpp  model.h  paths.h  projection.h
src/backends/: opengl_backend.cpp  opengl_backend.h  vulkan_backend.cpp  vulkan_backend.h
